Fixed responsiveness of iframe video, now resizes at 3 break points to prevent overflow

--- a/assets/css/3-sections/_video.sass
+++ b/assets/css/3-sections/_video.sass
@@ -17,3 +17,11 @@
         width: 640px
         height: 400px
         margin: 40px 0
+
+        @media (max-width: 900px)
+            width: 400px
+            height: 250px
+        
+        @media (max-width: 450px)
+            width: 360px
+            height: 225px
